[gd_scene load_steps=5 format=2]

[ext_resource path="res://Source/Scripts/level_transition.gd" type="Script" id=1]
[ext_resource path="res://Source/Fonts/DejaVuSansMono.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0313726, 0.0313726, 0.0313726, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 9.0
margin_top = 8.0
margin_right = 677.0
margin_bottom = 593.0
theme = SubResource( 2 )
custom_constants/separation = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.7
autostart = true

[node name="Timer2" type="Timer" parent="."]
one_shot = true

[node name="UpdateLoadingScroll" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="FinishCheck" type="Timer" parent="."]
autostart = true

[node name="BackCheck" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="UpdateLoadingScroll" to="." method="_on_UpdateLoadingScroll_timeout"]
[connection signal="timeout" from="FinishCheck" to="." method="_on_FinishCheck_timeout"]
[connection signal="timeout" from="BackCheck" to="." method="_on_BackCheck_timeout"]
